--- a/config.gradle
+++ b/config.gradle
@@ -10,7 +10,7 @@ ext {
             "minSdkVersion"    : 21,
             "targetSdkVersion" : 28,
             "versionCode"      : 1,
-            "versionName"      : "1.0.3"
+            "versionName"      : "1.0.4"
     ]
 
     dependencies = [
@@ -19,5 +19,11 @@ ext {
             "design"          : "com.android.support:design:${supportVersion}",
             "glide"           : "com.github.bumptech.glide:glide:${glide}",
             "constraintLayout": "com.android.support.constraint:constraint-layout:${constraintLayout}",
+    ]
+
+    // 统一java jdk版本
+    compileOptions = [
+            "sourceCompatibility": JavaVersion.VERSION_1_8,
+            "targetCompatibility": JavaVersion.VERSION_1_8
     ]
 }
