--- a/muldiaolg/build.gradle
+++ b/muldiaolg/build.gradle
@@ -19,6 +19,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility rootProject.ext.compileOptions.sourceCompatibility
+        targetCompatibility rootProject.ext.compileOptions.targetCompatibility
+    }
+
 }
 
 dependencies {
