--- a/config.gradle
+++ b/config.gradle
@@ -1,24 +1,24 @@
-def supportVersion = "27.1.1"
+def supportVersion = "1.2.0"
 def glide = "4.8.0"
-def constraintLayout = "1.0.2"
+def constraintLayout = "1.1.3"
 
 ext {
     config = [
-            "compileSdkVersion": 28,
-            "buildToolsVersion": "28.0.3",
+            "compileSdkVersion": 29,
+            "buildToolsVersion": "29.0.3",
             "applicationId"    : "com.mul.diaolg",
-            "minSdkVersion"    : 21,
-            "targetSdkVersion" : 28,
+            "minSdkVersion"    : 24,
+            "targetSdkVersion" : 29,
             "versionCode"      : 1,
             "versionName"      : "1.0.11"
     ]
 
     dependencies = [
-            "appcompat"       : "com.android.support:appcompat-v7:${supportVersion}",
-            "recyclerview"    : "com.android.support:recyclerview-v7:${supportVersion}",
-            "design"          : "com.android.support:design:${supportVersion}",
+            "appcompat"       : "androidx.appcompat:appcompat:${supportVersion}",
+            "material"        : "com.google.android.material:material:${supportVersion}",
+//            "recyclerview"    : "com.android.support:recyclerview-v7:${supportVersion}",
             "glide"           : "com.github.bumptech.glide:glide:${glide}",
-            "constraintLayout": "com.android.support.constraint:constraint-layout:${constraintLayout}",
+            "constraintLayout": "androidx.constraintlayout:constraintlayout:${constraintLayout}"
     ]
 
     // 统一java jdk版本
