--- a/muldiaolg/build.gradle
+++ b/muldiaolg/build.gradle
@@ -29,7 +29,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
-    implementation rootProject.ext.dependencies["recyclerview"]
+    implementation rootProject.ext.dependencies["material"]
+//    implementation rootProject.ext.dependencies["recyclerview"]
     implementation rootProject.ext.dependencies["glide"]
     implementation rootProject.ext.dependencies["constraintLayout"]
 }
