--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,15 @@ buildscript {
 
     repositories {
         google()
+
+        maven { url "https://jitpack.io" }
+
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
-
+        // jitpack上传配
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'//this
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,6 +21,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+
+        maven { url "https://jitpack.io" }
+
         jcenter()
     }
 }
