--- a/config.gradle
+++ b/config.gradle
@@ -9,8 +9,8 @@ ext {
             "applicationId"    : "com.mul.diaolg",
             "minSdkVersion"    : 21,
             "targetSdkVersion" : 29,
-            "versionCode"      : 4,
-            "versionName"      : "v1.0.3-beta"
+            "versionCode"      : 2,
+            "versionName"      : "v1.0.1"
     ]
 
     dependencies = [
